fix(skin): left-align footer links to their section headings
The flex column rule (#footer ul) was also hitting the inner ul.menu, so link
lists rendered as a centered flex row while headings stayed left. Scope the flex
layout to the outer nav ul (#footer > ul); menu is now a left-aligned block list.

--- a/public/stylesheets/site/2.0/06-region-footer.css
+++ b/public/stylesheets/site/2.0/06-region-footer.css
@@ -18,7 +18,7 @@ clean hover links.
   width: 100%;
 }
 
-#footer ul {
+#footer > ul {
   border: 0;
   clear: both;
   margin: 0 auto;
@@ -49,8 +49,10 @@ clean hover links.
 }
 
 #footer .menu {
+  display: block;
   margin: 0.5em 0 0;
   padding: 0;
+  text-align: left;
 }
 
 #footer .menu li {
